Modified api and keypad
