# app/Controller/Component/DiscountHandlerComponent.php
@@ -18,23 +18,26 @@ class DiscountHandlerComponent extends Component {
         ApiHelperComponent::verifyRequiredParams($args, ['order_no']);
 
         // get all params
-        $order_no = $args['order_no'];
+        $order_no      = $args['order_no'];
+        $discountType  = isset($args['discountType'])?$args['discountType']:$_GET['discountType'];
+        $discountValue = isset($args['discountValue'])?$args['discountValue']:$_GET['discountValue'];
+
         $order_id = $this->Order->getOrderIdByOrderNo($order_no);
-        // $order_id = $args['order_id'];
-        $fix_discount = isset($args['fix_discount']) ? floatval($args['fix_discount']) : 0;
-        $percent_discount = isset($args['percent_discount']) ? floatval($args['percent_discount']) : 0;
-        $promocode = $args['promocode'];
+        
 
-        $response = array('error' => false, 'message' => 'Add discount successfully');
+        $response = array('ret' => 1, 'message' => 'Add discount successfully');
 
-
-        if ($fix_discount > 0) {
-        	$response = $this->fixDiscountStrategy($order_id, $fix_discount);
-        } else if ($percent_discount > 0) {
-        	$response = $this->percentDiscountStrategy($order_id, $percent_discount);
-        } else if ($promocode != "") {
-        	$response = $this->promocodeDiscountStrategy($order_id, $promocode);
+        if ($discountType == 'fix_discount') {
+        	$response = $this->fixDiscountStrategy($order_id, $discountValue);
+        } else if ($discountType == 'percent_discount') {
+        	$response = $this->percentDiscountStrategy($order_id, $discountValue);
+        } else if ($discountType == 'promocode') {
+        	$response = $this->promocodeDiscountStrategy($order_id, $discountValue);
+        } else{
+        	$response = array('ret' => 0, 'message' => 'discountType error.');
+        	return $response;
         }
+
 
         $Order_detail = $this->Order->find("first", array(
 	    	  'fields' => array('Order.id', 'Order.fix_discount', 'Order.promocode', 'Order.percent_discount'),
@@ -78,10 +81,13 @@ class DiscountHandlerComponent extends Component {
         	'conditions' => array('Order.id' => $order_id)
         	));
 		$Order_detail['Order']['fix_discount'] = $discount_value;
+    $Order_detail['Order']['percent_discount'] = 0;
+    $Order_detail['Order']['promocode'] = "";
+
 
 		$this->Order->save($Order_detail, false);
 
-		$response = array('error' => false, 'message' => 'Add discount successfully');
+		$response = array('ret' => 1, 'message' => 'Add discount successfully');
 
 		return $response;
 	}
@@ -92,10 +98,12 @@ class DiscountHandlerComponent extends Component {
         	'conditions' => array('Order.id' => $order_id)
         	));
 		if ($discount_value > 100) {
-    		$response = array('error' => true,'message' => 'Please add valid discount');
+    		$response = array('ret' => 0,'message' => 'Please add valid discount');
     	} else {
-    		$response = array('error' => false, 'message' => 'Add discount successfully');
+    		$response = array('ret' => 1, 'message' => 'Add discount successfully');
     		$Order_detail['Order']['percent_discount'] = $discount_value;
+        $Order_detail['Order']['fix_discount'] = 0;
+        $Order_detail['Order']['promocode'] = "";
 
     		$this->Order->save($Order_detail, false);
     	}
@@ -114,26 +122,28 @@ class DiscountHandlerComponent extends Component {
         	'conditions' => array('Order.id' => $order_id)
         	));
 
-		$response = array('error' => false, 'message' => 'Discount successfully applied');
+		$response = array('ret' => 1, 'message' => 'Discount successfully added');
 
-        if (empty($promo_detail)) {
-            $response = array( 'error' => true, 'message' => 'Promocode does not exist.');
-        } else {
+    if (empty($promo_detail)) {
+      $response = array( 'error' => true, 'message' => 'Promocode does not exist.');
+    } else {
 
 			if (!(time() >= strtotime($promo_detail['Promocode']['valid_from']) and time() <= strtotime($promo_detail['Promocode']['valid_to']))) {
 			    $response = array(
-			        'error' => true,
+			        'ret' => 0,
 			        'message' => 'Sorry, promo code is expired'
 			    );
 			} else if ($promo_detail['Promocode']['discount_type'] == 1) {// percent discount
 				$Order_detail['Order']['promocode'] = $promocode;
 				$Order_detail['Order']['percent_discount'] = $promo_detail['Promocode']['discount_value'];
 
-				$this->Order->save($Order_detail, false);
-        	}
-        }
+        $Order_detail['Order']['fix_discount'] = 0;
 
-        return $response;
+			  $this->Order->save($Order_detail, false);
+      }
+    }
+
+    return $response;
 	}
 
 }
